2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 528648 – Extra >s in Object Construction section...

	* gobject/tut_howto.xml: Fix a formatting glitch

2008-05-14  Tor Lillqvist  <tml@novell.com>

	* glib/tmpl/spawn.sgml: Don't mention fork()/exec() in the short
	description. fork()/exec() is an implementation detail on Unix.

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/unicode.sgml: Updates for Unicode 5.1

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 526572 – Missing * in declaration of parent_class in Object
	Destruction section of GObject Reference Manual

	* gobject/tut_howto.xml: Add missing *.

2008-04-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 525553 – fix typo and nitpicking in GArray documentation

	* glib/tmpl/arrays.sgml: Correct an index in an example,
	pointed out by Paul Bolle

2008-03-30  Matthias Clasen  <mclasen@redhat.com>
	
	* gio/gio-sections.txt: Add g_file_query_file_type.

2008-03-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* glib/tmpl/macros-misc.sgml: Document G_GNUC_ALLOC_SIZE
	macros

2008-03-28  A. Walton  <awalton@svn.gnome.org>

	* gio/overview.xml:
	Document GIO_EXTRA_MODULES, fixes a small typo.

2008-03-19  Matthias Clasen  <mclasen@redhat.com>

	* gio/overview.xml: Document GVS_DISABLE_FUSE.

2008-03-12  Benjamin Otte  <otte@gnome.org>

	* gio/gio-sections.txt:
	g_file_contains_file() doesn't exist anymore

2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/linked_lists_double.sgml:
	* glib/tmpl/linked_lists_single.sgml: Remove docs that have
	been inlined.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/types.sgml: Add a Since marker for goffset (#521013,
	Charles Kerr)

2008-02-29  Matthias Clasen  <mclasen@redhat.com>
